// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totalling
     
    $1.00
  </p>
</div>
`;

exports[`should correctly render ExpensesSummary with multiple expense 1`] = `
<div>
  <p>
    Viewing 
    2
     
    expenses
     totalling
     
    $2.00
  </p>
</div>
`;
